syntax = "proto3";

package service;

service Node {
    rpc Ping (Empty) returns (Pong) {}
    rpc Execute (ExecutionRequest) returns (ExecutionResponse) {}
    rpc Details (Empty) returns (NodeDetails) {}
}

message Pong {
    string message = 1;
}

message NodeDetails {
    string version = 1;
    string hostname = 2;
    int32 service_port = 3;
    repeated NodeNetworkDetails networks = 4;
}

message NodeNetworkDetails {
    string interface = 1;
    string ip_address = 2;
    string mac_address = 3;
}

message ExecutionResponse {
    string command = 1;
    string std_out = 2;
    string std_err = 3;
    bool background = 4;
}

message ExecutionRequest {
    string command = 1;
    string context = 2;
}

message Empty {
}
